--- a/notebooks/test-pipeline.ipynb
+++ b/notebooks/test-pipeline.ipynb
@@ -9,6 +9,7 @@
     "# Jax imports\n",
     "import jax\n",
     "import jax.numpy as jnp\n",
+    "import numpy as np\n",
     "from jax import jit\n",
     "from jax import config\n",
     "config.update(\"jax_enable_x64\", False)"
@@ -106,25 +107,11 @@
     "# Plot scattering image\n",
     "plt.imshow(ifft(scattering_image), origin=\"lower\", cmap=\"gray\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.12 ('jax-2dtm')",
    "language": "python",
    "name": "python3"
   },
@@ -138,7 +125,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "d54389072f5f521d2ecfa69c70221601c9c73f7ba153ba5ad0df84f5e2694f8a"
+   }
   }
  },
  "nbformat": 4,
