--- a/notebooks/test-pipeline.ipynb
+++ b/notebooks/test-pipeline.ipynb
@@ -31,7 +31,7 @@
    "outputs": [],
    "source": [
     "# IO utils\n",
-    "from jax_2dtm.io import load_mrc"
+    "from jax_2dtm.io import load_grid_as_cloud"
    ]
   },
   {
@@ -42,6 +42,7 @@
    "source": [
     "# Image simulator\n",
     "from jax_2dtm.simulator import coordinatize, rotate_and_translate, project\n",
+    "from jax_2dtm.simulator import Cloud, Pose, ImageConfig\n",
     "from jax_2dtm.utils import ifft"
    ]
   },
@@ -62,19 +63,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load volume\n",
-    "template = load_mrc(filename)\n",
-    "shape = template.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Flatten volume and give it a coordinate system\n",
-    "volume, coords = coordinatize(template, pixel_size, eps=1e-5)"
+    "# Configure image data and read template as point cloud\n",
+    "config = ImageConfig((54, 54), pixel_size, eps=1e-6)\n",
+    "cloud = load_grid_as_cloud(filename, config, threshold=1e-5)"
    ]
   },
   {
@@ -84,8 +75,8 @@
    "outputs": [],
    "source": [
     "# Transform coordinates\n",
-    "phi, theta, psi, tx, ty = (np.pi/8, np.pi/2, 0.0, 30.0, 10.0)\n",
-    "transformed_coords = rotate_and_translate(coords, phi, theta, psi, tx, ty)"
+    "pose = Pose(np.pi/8, np.pi/2, 0.0, 30.0, 70.0)\n",
+    "transformed_cloud = rotate_and_translate(cloud, pose)"
    ]
   },
   {
@@ -95,7 +86,7 @@
    "outputs": [],
    "source": [
     "# Compute scattering image\n",
-    "scattering_image = project(volume, transformed_coords, shape, pixel_size, eps=1e-6)"
+    "scattering_image = project(transformed_cloud, config)"
    ]
   },
   {
@@ -106,6 +97,51 @@
    "source": [
     "# Plot scattering image\n",
     "plt.imshow(ifft(scattering_image), origin=\"lower\", cmap=\"gray\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_pipeline(config: ImageConfig, cloud: Cloud):\n",
+    "    \"\"\"\n",
+    "    Get jitted pipeline with configured\n",
+    "    static variables.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def pipeline(phi, theta, psi, tx, ty):\n",
+    "        pose = Pose(phi, theta, psi, tx, ty)\n",
+    "        transformed_cloud = rotate_and_translate(cloud, pose)\n",
+    "        scattering_image = project(transformed_cloud, config)\n",
+    "\n",
+    "        return scattering_image\n",
+    "\n",
+    "    return jax.jit(jax.vmap(pipeline, in_axes=0))# in_axes=[0, 0, 0, 0, 0, None, None]))\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get pipeline\n",
+    "pipeline = get_pipeline(config, cloud)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Compute and plot\n",
+    "pose = Pose(np.array([np.pi/8, 0.0]), np.array([np.pi/2, 0]), np.array([0.0, 0.0]), np.array([30.0, 0.0]), np.array([70.0, 0.0]))\n",
+    "scattering_image = pipeline(*pose)\n",
+    "plt.imshow(ifft(scattering_image[0]), origin=\"lower\", cmap=\"gray\")"
    ]
   }
  ],
