--- a/notebooks/test-pipeline.ipynb
+++ b/notebooks/test-pipeline.ipynb
@@ -118,7 +118,7 @@
     "\n",
     "        return scattering_image\n",
     "\n",
-    "    return jax.jit(jax.vmap(pipeline, in_axes=0))# in_axes=[0, 0, 0, 0, 0, None, None]))\n",
+    "    return pipeline\n",
     "    \n"
    ]
   },
@@ -129,7 +129,8 @@
    "outputs": [],
    "source": [
     "# Get pipeline\n",
-    "pipeline = get_pipeline(config, cloud)"
+    "pipeline = get_pipeline(config, cloud)\n",
+    "jitted_pipeline = jax.jit(jax.vmap(pipeline, in_axes=0))# in_axes=[0, 0, 0, 0, 0, None, None]))"
    ]
   },
   {
@@ -140,7 +141,7 @@
    "source": [
     "# Compute and plot\n",
     "pose = Pose(np.array([np.pi/8, 0.0]), np.array([np.pi/2, 0]), np.array([0.0, 0.0]), np.array([30.0, 0.0]), np.array([70.0, 0.0]))\n",
-    "scattering_image = pipeline(*pose)\n",
+    "scattering_image = jitted_pipeline(*pose)\n",
     "plt.imshow(ifft(scattering_image[0]), origin=\"lower\", cmap=\"gray\")"
    ]
   }
