--- a/notebooks/test-pipeline.ipynb
+++ b/notebooks/test-pipeline.ipynb
@@ -141,8 +141,8 @@
    "source": [
     "# Compute and plot\n",
     "pose = Pose(np.array([np.pi/8, 0.0]), np.array([np.pi/2, 0]), np.array([0.0, 0.0]), np.array([30.0, 0.0]), np.array([70.0, 0.0]))\n",
-    "scattering_image = jitted_pipeline(*pose)\n",
-    "plt.imshow(ifft(scattering_image[0]), origin=\"lower\", cmap=\"gray\")"
+    "scattering_image = jitted_pipeline(*pose.iter_data())\n",
+    "plt.imshow(ifft(scattering_image[1]), origin=\"lower\", cmap=\"gray\")"
    ]
   }
  ],
