first pass at model API

--- a/notebooks/test-pipeline.ipynb
+++ b/notebooks/test-pipeline.ipynb
@@ -43,6 +43,8 @@
     "# Image simulator\n",
     "from jax_2dtm.simulator import rotate_and_translate, project\n",
     "from jax_2dtm.simulator import Cloud, Pose, ImageConfig\n",
+    "from jax_2dtm.simulator import ScatteringImage\n",
+    "from jax_2dtm.simulator import ParameterState\n",
     "from jax_2dtm.utils import ifft"
    ]
   },
@@ -105,32 +107,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_pipeline(config: ImageConfig, cloud: Cloud):\n",
-    "    \"\"\"\n",
-    "    Get jitted pipeline with configured\n",
-    "    static variables.\n",
-    "    \"\"\"\n",
-    "\n",
-    "    def pipeline(phi, theta, psi, tx, ty):\n",
-    "        pose = Pose(phi, theta, psi, tx, ty)\n",
-    "        transformed_cloud = rotate_and_translate(cloud, pose)\n",
-    "        scattering_image = project(transformed_cloud, config)\n",
-    "\n",
-    "        return scattering_image\n",
-    "\n",
-    "    return pipeline\n",
-    "    \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Get pipeline\n",
-    "pipeline = get_pipeline(config, cloud)\n",
-    "jitted_pipeline = jax.jit(jax.vmap(pipeline, in_axes=0))# in_axes=[0, 0, 0, 0, 0, None, None]))"
+    "# Initialize model, parameters, and compute image\n",
+    "model = ScatteringImage(config, cloud)\n",
+    "params = ParameterState(pose)\n",
+    "scattering_image = model(params)\n",
+    "plt.imshow(ifft(scattering_image), origin=\"lower\", cmap=\"gray\")"
    ]
   },
   {
@@ -140,6 +121,8 @@
    "outputs": [],
    "source": [
     "# Compute and plot\n",
+    "pipeline = get_pipeline(config, cloud)\n",
+    "jitted_pipeline = jax.jit(jax.vmap(pipeline, in_axes=0))# in_axes=[0, 0, 0, 0, 0, None, None]))\n",
     "pose = Pose(np.array([np.pi/8, 0.0]), np.array([np.pi/2, 0]), np.array([0.0, 0.0]), np.array([30.0, 0.0]), np.array([70.0, 0.0]))\n",
     "scattering_image = jitted_pipeline(*pose.iter_data())\n",
     "plt.imshow(ifft(scattering_image[1]), origin=\"lower\", cmap=\"gray\")"
