--- a/notebooks/test-pipeline.ipynb
+++ b/notebooks/test-pipeline.ipynb
@@ -55,8 +55,8 @@
    "outputs": [],
    "source": [
     "# Volume filename and metadata\n",
-    "pixel_size = 6.6 # Angstroms\n",
-    "filename = \"../tests/data/example.mrc\""
+    "pixel_size = 5.28 # Angstroms\n",
+    "filename = \"../tests/data/3jar_13pf_bfm1_ps5_28.mrc\""
    ]
   },
   {
@@ -66,8 +66,8 @@
    "outputs": [],
    "source": [
     "# Configure image data and read template as point cloud\n",
-    "config = ImageConfig((54, 54), pixel_size, eps=1e-6)\n",
-    "cloud = load_grid_as_cloud(filename, config, threshold=1e-5)"
+    "config = ImageConfig((50, 50), pixel_size, eps=1e-4)\n",
+    "cloud = load_grid_as_cloud(filename, config, threshold=1e-4)"
    ]
   },
   {
@@ -77,7 +77,7 @@
    "outputs": [],
    "source": [
     "# Transform coordinates\n",
-    "pose = Pose(np.pi/8, np.pi/2, 0.0, 30.0, 70.0)\n",
+    "pose = Pose(np.pi/8, np.pi/12, np.pi/4, 50.0, 50.0)\n",
     "transformed_cloud = rotate_and_translate(cloud, pose)"
    ]
   },
@@ -145,7 +145,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.11"
   },
   "vscode": {
    "interpreter": {
