starting anti-aliasing dev

--- a/notebooks/test-pipeline.ipynb
+++ b/notebooks/test-pipeline.ipynb
@@ -97,6 +97,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from jax_2dtm.utils import fft\n",
+    "\n",
+    "plt.imshow(np.abs(scattering_image - fft(ifft(scattering_image)))**2, origin=\"lower\", cmap=\"gray\")\n",
+    "plt.colorbar()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Plot scattering image\n",
     "plt.imshow(ifft(scattering_image), origin=\"lower\", cmap=\"gray\")"
    ]
