--- a/notebooks/test-pipeline.ipynb
+++ b/notebooks/test-pipeline.ipynb
@@ -41,11 +41,11 @@
    "outputs": [],
    "source": [
     "# Image simulator\n",
-    "from jax_2dtm.simulator import rotate_and_translate, project\n",
+    "from jax_2dtm.simulator import rotate_and_translate, project, anti_aliasing_filter\n",
     "from jax_2dtm.simulator import Cloud, Pose, ImageConfig\n",
     "from jax_2dtm.simulator import ScatteringImage\n",
     "from jax_2dtm.simulator import ParameterState\n",
-    "from jax_2dtm.utils import ifft"
+    "from jax_2dtm.utils import fft, ifft, fftfreqs"
    ]
   },
   {
@@ -97,10 +97,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from jax_2dtm.utils import fft\n",
-    "\n",
-    "plt.imshow(np.abs(scattering_image - fft(ifft(scattering_image)))**2, origin=\"lower\", cmap=\"gray\")\n",
-    "plt.colorbar()"
+    "# Apply anti-aliasing filter\n",
+    "freqs = fftfreqs(config.shape, config.pixel_size)\n",
+    "filter = anti_aliasing_filter(config, freqs)\n",
+    "filtered_image = filter * scattering_image"
    ]
   },
   {
@@ -109,8 +109,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Plot scattering image\n",
-    "plt.imshow(ifft(scattering_image), origin=\"lower\", cmap=\"gray\")"
+    "# Compare projection with anti-aliasing filter\n",
+    "fig, axes = plt.subplots(ncols=2)\n",
+    "ax1, ax2 = axes\n",
+    "ax1.imshow(ifft(scattering_image), origin=\"lower\", cmap=\"gray\")\n",
+    "ax2.imshow(ifft(filtered_image), origin=\"lower\", cmap=\"gray\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sanity check that ffts are correct\n",
+    "plt.imshow(ifft(fft(ifft(filtered_image))) - ifft(filtered_image), origin=\"lower\", cmap=\"gray\")\n",
+    "plt.colorbar()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that we have confirmed the pipeline works step-by-step, let's demonstrate how to use the API."
    ]
   },
   {
@@ -127,18 +148,66 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Compute an image is straight-forward, but really we want to define a function that can be arbitrarily transformed by JAX and evaulated at subsets of the parameters."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Compute and plot\n",
-    "pipeline = get_pipeline(config, cloud)\n",
-    "jitted_pipeline = jax.jit(jax.vmap(pipeline, in_axes=0))# in_axes=[0, 0, 0, 0, 0, None, None]))\n",
-    "pose = Pose(np.array([np.pi/8, 0.0]), np.array([np.pi/2, 0]), np.array([0.0, 0.0]), np.array([30.0, 0.0]), np.array([70.0, 0.0]))\n",
-    "scattering_image = jitted_pipeline(*pose.iter_data())\n",
-    "plt.imshow(ifft(scattering_image[1]), origin=\"lower\", cmap=\"gray\")"
+    "# Pose parameters\n",
+    "pose = Pose(np.pi/8, np.pi/12, np.pi/4, 50.0, 50.0)\n",
+    "state = ParameterState(pose=pose)\n",
+    "params = dict(pose=dict(view_phi=np.pi))\n",
+    "print(params)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define jitted pipeline, first defining the model globally\n",
+    "model = ScatteringImage(config, cloud, state)\n",
+    "\n",
+    "@jax.jit\n",
+    "def compute(params):\n",
+    "    scattering_image = model(params)\n",
+    "    return scattering_image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Benchmark jitted pipeline\n",
+    "%timeit scattering_image = compute(params).block_until_ready()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Benchmark non-jitted pipeline\n",
+    "%timeit scattering_image = model(params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
