API for filters. Give an ImageModel a coordinate system.

--- a/notebooks/test-pipeline.ipynb
+++ b/notebooks/test-pipeline.ipynb
@@ -43,7 +43,7 @@
     "# Image simulator\n",
     "from jax_2dtm.simulator import rotate_and_translate, project, anti_aliasing_filter\n",
     "from jax_2dtm.simulator import Cloud, Pose, ImageConfig\n",
-    "from jax_2dtm.simulator import ScatteringImage\n",
+    "from jax_2dtm.simulator import ScatteringModel\n",
     "from jax_2dtm.simulator import ParameterState\n",
     "from jax_2dtm.utils import fft, ifft, fftfreqs"
    ]
@@ -66,7 +66,7 @@
    "outputs": [],
    "source": [
     "# Configure image data and read template as point cloud\n",
-    "config = ImageConfig((50, 50), pixel_size, eps=1e-4)\n",
+    "config = ImageConfig((60, 60), pixel_size, eps=1e-4)\n",
     "cloud = load_grid_as_cloud(filename, config, threshold=1e-4)"
    ]
   },
@@ -76,31 +76,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Transform coordinates\n",
-    "pose = Pose(np.pi/8, np.pi/12, np.pi/4, 50.0, 50.0)\n",
-    "transformed_cloud = rotate_and_translate(cloud, pose)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Compute scattering image\n",
-    "scattering_image = project(transformed_cloud, config)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Apply anti-aliasing filter\n",
     "freqs = fftfreqs(config.shape, config.pixel_size)\n",
-    "filter = anti_aliasing_filter(config, freqs)\n",
-    "filtered_image = filter * scattering_image"
+    "pose = Pose(np.pi/8, np.pi/10, np.pi/4, 50.0, 50.0)\n",
+    "transformed_cloud = rotate_and_translate(cloud, pose)\n",
+    "scattering_image = anti_aliasing_filter(freqs, config.pixel_size) * project(transformed_cloud, config)"
    ]
   },
   {
@@ -109,11 +89,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Compare projection with anti-aliasing filter\n",
-    "fig, axes = plt.subplots(ncols=2)\n",
-    "ax1, ax2 = axes\n",
-    "ax1.imshow(ifft(scattering_image), origin=\"lower\", cmap=\"gray\")\n",
-    "ax2.imshow(ifft(filtered_image), origin=\"lower\", cmap=\"gray\")"
+    "# Plot scattering\n",
+    "plt.imshow(ifft(scattering_image), origin=\"lower\", cmap=\"gray\")"
    ]
   },
   {
@@ -123,7 +100,7 @@
    "outputs": [],
    "source": [
     "# Sanity check that ffts are correct\n",
-    "plt.imshow(ifft(fft(ifft(filtered_image))) - ifft(filtered_image), origin=\"lower\", cmap=\"gray\")\n",
+    "plt.imshow(ifft(fft(ifft(scattering_image))) - ifft(scattering_image), origin=\"lower\", cmap=\"gray\")\n",
     "plt.colorbar()"
    ]
   },
@@ -141,9 +118,9 @@
    "outputs": [],
    "source": [
     "# Initialize model, parameters, and compute image\n",
-    "model = ScatteringImage(config, cloud)\n",
-    "params = ParameterState(pose)\n",
-    "scattering_image = model(params)\n",
+    "state = ParameterState(pose)\n",
+    "model = ScatteringModel(config, cloud, state)\n",
+    "scattering_image = model(state)\n",
     "plt.imshow(ifft(scattering_image), origin=\"lower\", cmap=\"gray\")"
    ]
   },
@@ -151,7 +128,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Compute an image is straight-forward, but really we want to define a function that can be arbitrarily transformed by JAX and evaulated at subsets of the parameters."
+    "Computing an image is straight-forward, but really we want to define a function that can be arbitrarily transformed by JAX and evaulated at subsets of the parameters."
    ]
   },
   {
@@ -160,11 +137,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Pose parameters\n",
+    "# Define subset of parameters over which to evaluate model\n",
     "pose = Pose(np.pi/8, np.pi/12, np.pi/4, 50.0, 50.0)\n",
     "state = ParameterState(pose=pose)\n",
-    "params = dict(pose=dict(view_phi=np.pi))\n",
-    "print(params)"
+    "params = dict(view_phi=np.pi)"
    ]
   },
   {
@@ -174,10 +150,10 @@
    "outputs": [],
    "source": [
     "# Define jitted pipeline, first defining the model globally\n",
-    "model = ScatteringImage(config, cloud, state)\n",
+    "model = ScatteringModel(config, cloud, state)\n",
     "\n",
     "@jax.jit\n",
-    "def compute(params):\n",
+    "def compute_image(params):\n",
     "    scattering_image = model(params)\n",
     "    return scattering_image"
    ]
@@ -189,7 +165,7 @@
    "outputs": [],
    "source": [
     "# Benchmark jitted pipeline\n",
-    "%timeit scattering_image = compute(params).block_until_ready()"
+    "%timeit scattering_image = compute_image(params).block_until_ready()"
    ]
   },
   {
@@ -201,13 +177,6 @@
     "# Benchmark non-jitted pipeline\n",
     "%timeit scattering_image = model(params)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
