--- a/notebooks/test-pipeline.ipynb
+++ b/notebooks/test-pipeline.ipynb
@@ -41,10 +41,10 @@
    "outputs": [],
    "source": [
     "# Image simulator\n",
-    "from jax_2dtm.simulator import rotate_and_translate, project, anti_aliasing_filter\n",
-    "from jax_2dtm.simulator import Cloud, Pose, ImageConfig\n",
-    "from jax_2dtm.simulator import ScatteringModel\n",
-    "from jax_2dtm.simulator import ParameterState\n",
+    "from jax_2dtm.simulator import rotate_and_translate, project_with_nufft, compute_anti_aliasing_filter\n",
+    "from jax_2dtm.simulator import Cloud, ImageConfig\n",
+    "from jax_2dtm.simulator import ScatteringImage, OpticsImage\n",
+    "from jax_2dtm.simulator import Pose, CTFOptics, ParameterState\n",
     "from jax_2dtm.utils import fft, ifft, fftfreqs"
    ]
   },
@@ -79,8 +79,20 @@
     "# Compute scattering image\n",
     "freqs = fftfreqs(config.shape, config.pixel_size)\n",
     "pose = Pose(np.pi/8, np.pi/10, np.pi/4, 50.0, 50.0)\n",
-    "transformed_cloud = rotate_and_translate(cloud, pose)\n",
-    "scattering_image = anti_aliasing_filter(freqs, config.pixel_size) * project(transformed_cloud, config)"
+    "transformed_cloud = cloud.view(pose)\n",
+    "scattering_image = compute_anti_aliasing_filter(freqs, config.pixel_size) * project_with_nufft(config, *transformed_cloud.iter_meta())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Apply optics model\n",
+    "optics = CTFOptics()\n",
+    "ctf = optics(freqs)\n",
+    "optics_image = scattering_image * ctf"
    ]
   },
   {
@@ -90,7 +102,10 @@
    "outputs": [],
    "source": [
     "# Plot scattering\n",
-    "plt.imshow(ifft(scattering_image), origin=\"lower\", cmap=\"gray\")"
+    "fig, axes = plt.subplots(ncols=2)\n",
+    "ax1, ax2 = axes\n",
+    "ax1.imshow(ifft(scattering_image), origin=\"lower\", cmap=\"gray\")\n",
+    "ax2.imshow(ifft(optics_image), origin=\"lower\", cmap=\"gray\")"
    ]
   },
   {
@@ -118,10 +133,10 @@
    "outputs": [],
    "source": [
     "# Initialize model, parameters, and compute image\n",
-    "state = ParameterState(pose)\n",
-    "model = ScatteringModel(config, cloud, state)\n",
-    "scattering_image = model(state)\n",
-    "plt.imshow(ifft(scattering_image), origin=\"lower\", cmap=\"gray\")"
+    "state = ParameterState(pose=pose, optics=optics)\n",
+    "model = OpticsImage(config=config, cloud=cloud, state=state)\n",
+    "optics_image = model(state)\n",
+    "plt.imshow(ifft(optics_image), origin=\"lower\", cmap=\"gray\")"
    ]
   },
   {
@@ -138,9 +153,7 @@
    "outputs": [],
    "source": [
     "# Define subset of parameters over which to evaluate model\n",
-    "pose = Pose(np.pi/8, np.pi/12, np.pi/4, 50.0, 50.0)\n",
-    "state = ParameterState(pose=pose)\n",
-    "params = dict(view_phi=np.pi)"
+    "params = dict(view_phi=np.pi, defocus_u=9000)"
    ]
   },
   {
@@ -149,9 +162,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define jitted pipeline, first defining the model globally\n",
-    "model = ScatteringModel(config, cloud, state)\n",
-    "\n",
     "@jax.jit\n",
     "def compute_image(params):\n",
     "    scattering_image = model(params)\n",
@@ -165,7 +175,7 @@
    "outputs": [],
    "source": [
     "# Benchmark jitted pipeline\n",
-    "%timeit scattering_image = compute_image(params).block_until_ready()"
+    "%timeit optics_image = compute_image(params).block_until_ready()"
    ]
   },
   {
@@ -175,7 +185,7 @@
    "outputs": [],
    "source": [
     "# Benchmark non-jitted pipeline\n",
-    "%timeit scattering_image = model(params)"
+    "%timeit optics_image = model(params)"
    ]
   }
  ],
