Refactoring for more sensible import structure. More extensibility in Poses, and generalize ImageConfig to ScatteringConfig. Now, Clouds can be evaulated for arbitrary Pose conventions and scattering methods.

--- a/notebooks/test-pipeline.ipynb
+++ b/notebooks/test-pipeline.ipynb
@@ -8,9 +8,7 @@
    "source": [
     "# Jax imports\n",
     "import jax\n",
-    "import jax.numpy as jnp\n",
     "import numpy as np\n",
-    "from jax import jit\n",
     "from jax import config\n",
     "config.update(\"jax_enable_x64\", False)"
    ]
@@ -41,10 +39,10 @@
    "outputs": [],
    "source": [
     "# Image simulator\n",
-    "from jax_2dtm.simulator import rotate_and_translate, project_with_nufft, compute_anti_aliasing_filter\n",
-    "from jax_2dtm.simulator import Cloud, ImageConfig\n",
+    "from jax_2dtm.simulator import compute_anti_aliasing_filter\n",
+    "from jax_2dtm.simulator import Cloud, ScatteringConfig\n",
     "from jax_2dtm.simulator import ScatteringImage, OpticsImage\n",
-    "from jax_2dtm.simulator import Pose, CTFOptics, ParameterState\n",
+    "from jax_2dtm.simulator import EulerPose, CTFOptics, ParameterState\n",
     "from jax_2dtm.utils import fft, ifft, fftfreqs"
    ]
   },
@@ -66,7 +64,7 @@
    "outputs": [],
    "source": [
     "# Configure image data and read template as point cloud\n",
-    "config = ImageConfig((60, 60), pixel_size, eps=1e-4)\n",
+    "config = ScatteringConfig((60, 60), pixel_size, eps=1e-4)\n",
     "cloud = load_grid_as_cloud(filename, config, threshold=1e-4)"
    ]
   },
@@ -78,9 +76,9 @@
    "source": [
     "# Compute scattering image\n",
     "freqs = fftfreqs(config.shape, config.pixel_size)\n",
-    "pose = Pose(np.pi/8, np.pi/10, np.pi/4, 50.0, 50.0)\n",
+    "pose = EulerPose(50.0, 50.0, np.pi/8, np.pi/10, np.pi/4)\n",
     "transformed_cloud = cloud.view(pose)\n",
-    "scattering_image = compute_anti_aliasing_filter(freqs, config.pixel_size) * project_with_nufft(config, *transformed_cloud.iter_meta())"
+    "scattering_image = compute_anti_aliasing_filter(freqs, config.pixel_size) * transformed_cloud.project(config)"
    ]
   },
   {
@@ -187,6 +185,13 @@
     "# Benchmark non-jitted pipeline\n",
     "%timeit optics_image = model(params)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
