Clean up Image API. Initial commit for noise models.

--- a/notebooks/test-pipeline.ipynb
+++ b/notebooks/test-pipeline.ipynb
@@ -64,7 +64,7 @@
    "outputs": [],
    "source": [
     "# Configure image data and read template as point cloud\n",
-    "config = ScatteringConfig((60, 60), pixel_size, eps=1e-4)\n",
+    "config = ScatteringConfig((80, 80), pixel_size, eps=1e-4)\n",
     "cloud = load_grid_as_cloud(filename, config, threshold=1e-4)"
    ]
   },
@@ -118,6 +118,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -138,6 +139,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -210,7 +212,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.12"
   },
   "vscode": {
    "interpreter": {
