Clean up ImageModel API. ParameterState has a noise model

--- a/notebooks/test-pipeline.ipynb
+++ b/notebooks/test-pipeline.ipynb
@@ -134,7 +134,7 @@
     "# Initialize model, parameters, and compute image\n",
     "state = ParameterState(pose=pose, optics=optics)\n",
     "model = OpticsImage(config=config, cloud=cloud, state=state)\n",
-    "optics_image = model(state)\n",
+    "optics_image = model()\n",
     "plt.imshow(ifft(optics_image), origin=\"lower\", cmap=\"gray\")"
    ]
   },
@@ -152,20 +152,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define subset of parameters over which to evaluate model\n",
-    "params = dict(view_phi=np.pi, defocus_u=9000)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "@jax.jit\n",
-    "def compute_image(params):\n",
-    "    scattering_image = model(params)\n",
-    "    return scattering_image"
+    "# Define subset of parameters over which to evaluate model, and jitted model\n",
+    "params = dict(view_phi=np.pi, defocus_u=9000)\n",
+    "jitted_model = jax.jit(lambda params: model(params))"
    ]
   },
   {
@@ -175,7 +164,7 @@
    "outputs": [],
    "source": [
     "# Benchmark jitted pipeline\n",
-    "%timeit optics_image = compute_image(params).block_until_ready()"
+    "%timeit optics_image = jitted_model(params).block_until_ready()"
    ]
   },
   {
@@ -187,13 +176,6 @@
     "# Benchmark non-jitted pipeline\n",
     "%timeit optics_image = model(params)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
