Make entire model a PyTree

--- a/notebooks/test-pipeline.ipynb
+++ b/notebooks/test-pipeline.ipynb
@@ -164,7 +164,7 @@
    "outputs": [],
    "source": [
     "# Benchmark jitted pipeline\n",
-    "%timeit optics_image = jitted_model(params).block_until_ready()"
+    "%timeit optics_image = jitted_model(params)"
    ]
   },
   {
