Make filters PyTrees too. Whitening filter initial commit

--- a/notebooks/test-pipeline.ipynb
+++ b/notebooks/test-pipeline.ipynb
@@ -10,6 +10,7 @@
     "import jax\n",
     "import numpy as np\n",
     "from jax import config\n",
+    "\n",
     "config.update(\"jax_enable_x64\", False)"
    ]
   },
@@ -41,8 +42,8 @@
     "# Image simulator\n",
     "from jax_2dtm.simulator import compute_anti_aliasing_filter\n",
     "from jax_2dtm.simulator import Cloud, ScatteringConfig\n",
-    "from jax_2dtm.simulator import ScatteringImage, OpticsImage\n",
-    "from jax_2dtm.simulator import EulerPose, CTFOptics, ParameterState\n",
+    "from jax_2dtm.simulator import ScatteringImage, OpticsImage, GaussianImage\n",
+    "from jax_2dtm.simulator import EulerPose, CTFOptics, WhiteNoise, ParameterState\n",
     "from jax_2dtm.utils import fft, ifft, fftfreqs"
    ]
   },
@@ -53,7 +54,7 @@
    "outputs": [],
    "source": [
     "# Volume filename and metadata\n",
-    "pixel_size = 5.28 # Angstroms\n",
+    "pixel_size = 5.28  # Angstroms\n",
     "filename = \"../tests/data/3jar_13pf_bfm1_ps5_28.mrc\""
    ]
   },
@@ -76,9 +77,11 @@
    "source": [
     "# Compute scattering image\n",
     "freqs = fftfreqs(config.shape, config.pixel_size)\n",
-    "pose = EulerPose(50.0, 50.0, np.pi/8, np.pi/10, np.pi/4)\n",
+    "pose = EulerPose(50.0, 50.0, np.pi / 8, np.pi / 10, np.pi / 4)\n",
     "transformed_cloud = cloud.view(pose)\n",
-    "scattering_image = compute_anti_aliasing_filter(freqs, config.pixel_size) * transformed_cloud.project(config)"
+    "scattering_image = compute_anti_aliasing_filter(\n",
+    "    freqs, config.pixel_size\n",
+    ") * transformed_cloud.project(config)"
    ]
   },
   {
