Image normalization and functioning noise models

--- a/notebooks/test-pipeline.ipynb
+++ b/notebooks/test-pipeline.ipynb
@@ -8,7 +8,9 @@
    "source": [
     "# Jax imports\n",
     "import jax\n",
+    "import jax.numpy as jnp\n",
     "import numpy as np\n",
+    "from jax import random\n",
     "from jax import config\n",
     "\n",
     "config.update(\"jax_enable_x64\", False)"
@@ -77,11 +79,9 @@
    "source": [
     "# Compute scattering image\n",
     "freqs = fftfreqs(config.shape, config.pixel_size)\n",
-    "pose = EulerPose(50.0, 50.0, np.pi / 8, np.pi / 10, np.pi / 4)\n",
+    "pose = EulerPose(-50.0, -50.0, np.pi / 8, np.pi / 10, np.pi / 4)\n",
     "transformed_cloud = cloud.view(pose)\n",
-    "scattering_image = compute_anti_aliasing_filter(\n",
-    "    freqs, config.pixel_size\n",
-    ") * transformed_cloud.project(config)"
+    "scattering_image = transformed_cloud.project(config) * compute_anti_aliasing_filter(freqs, config.pixel_size, cutoff=1.0)"
    ]
   },
   {
@@ -90,10 +90,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Apply optics model\n",
+    "# Apply optics model and normalize\n",
+    "N1, N2 = config.shape\n",
     "optics = CTFOptics()\n",
     "ctf = optics(freqs)\n",
-    "optics_image = scattering_image * ctf"
+    "optics_image = scattering_image * ctf\n",
+    "optics_image = optics_image.at[N1//2, N2//2].set(0.0)\n",
+    "optics_image = optics_image / (jnp.sqrt(jnp.sum((optics_image * jnp.conjugate(optics_image)))) / (N1*N2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add gaussian noise\n",
+    "noise = WhiteNoise(alpha=1.0)\n",
+    "noisy_image = optics_image + noise.sample(freqs, config)"
    ]
   },
   {
@@ -103,10 +117,11 @@
    "outputs": [],
    "source": [
     "# Plot scattering\n",
-    "fig, axes = plt.subplots(ncols=2)\n",
-    "ax1, ax2 = axes\n",
+    "fig, axes = plt.subplots(ncols=3, figsize=(12, 6))\n",
+    "ax1, ax2, ax3 = axes\n",
     "ax1.imshow(ifft(scattering_image), origin=\"lower\", cmap=\"gray\")\n",
-    "ax2.imshow(ifft(optics_image), origin=\"lower\", cmap=\"gray\")"
+    "ax2.imshow(ifft(optics_image), origin=\"lower\", cmap=\"gray\")\n",
+    "ax3.imshow(ifft(noisy_image), origin=\"lower\", cmap=\"gray\")"
    ]
   },
   {
@@ -124,10 +139,26 @@
    "outputs": [],
    "source": [
     "# Initialize model, parameters, and compute image\n",
-    "state = ParameterState(pose=pose, optics=optics)\n",
-    "model = OpticsImage(config=config, cloud=cloud, state=state)\n",
-    "optics_image = model()\n",
-    "plt.imshow(ifft(optics_image), origin=\"lower\", cmap=\"gray\")"
+    "pose = EulerPose(-50.0, -50.0, np.pi / 8, np.pi / 10, np.pi / 4)\n",
+    "optics = CTFOptics()\n",
+    "noise = WhiteNoise(alpha=1.0)\n",
+    "scattering_model = ScatteringImage(config=config, cloud=cloud, state=ParameterState(pose=pose))\n",
+    "optics_model = OpticsImage(config=config, cloud=cloud, state=ParameterState(pose=pose, optics=optics))\n",
+    "noisy_model = GaussianImage(config=config, cloud=cloud, state=ParameterState(pose=pose, optics=optics, noise=noise))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot models\n",
+    "fig, axes = plt.subplots(ncols=3, figsize=(12, 6))\n",
+    "ax1, ax2, ax3 = axes\n",
+    "ax1.imshow(ifft(scattering_model()), origin=\"lower\", cmap=\"gray\")\n",
+    "ax2.imshow(ifft(optics_model()), origin=\"lower\", cmap=\"gray\")\n",
+    "ax3.imshow(ifft(noisy_model()), origin=\"lower\", cmap=\"gray\")"
    ]
   },
   {
@@ -146,7 +177,7 @@
    "source": [
     "# Define subset of parameters over which to evaluate model, and jitted model\n",
     "params = dict(view_phi=np.pi, defocus_u=9000)\n",
-    "jitted_model = jax.jit(lambda params: model(params))"
+    "jitted_model = jax.jit(lambda params: optics_model(params))"
    ]
   },
   {
@@ -166,7 +197,7 @@
    "outputs": [],
    "source": [
     "# Benchmark non-jitted pipeline\n",
-    "%timeit optics_image = model(params)"
+    "%timeit optics_image = optics_model(params)"
    ]
   }
  ],
