Image intensity scaling and offset are parameters.

--- a/notebooks/test-pipeline.ipynb
+++ b/notebooks/test-pipeline.ipynb
@@ -10,7 +10,6 @@
     "import jax\n",
     "import jax.numpy as jnp\n",
     "import numpy as np\n",
-    "from jax import random\n",
     "from jax import config\n",
     "\n",
     "config.update(\"jax_enable_x64\", False)"
@@ -45,7 +44,7 @@
     "from jax_2dtm.simulator import compute_anti_aliasing_filter\n",
     "from jax_2dtm.simulator import Cloud, ScatteringConfig\n",
     "from jax_2dtm.simulator import ScatteringImage, OpticsImage, GaussianImage\n",
-    "from jax_2dtm.simulator import EulerPose, CTFOptics, WhiteNoise, ParameterState\n",
+    "from jax_2dtm.simulator import EulerPose, CTFOptics, Intensity, WhiteNoise, ParameterState\n",
     "from jax_2dtm.utils import fft, ifft, fftfreqs"
    ]
   },
@@ -67,7 +66,7 @@
    "outputs": [],
    "source": [
     "# Configure image data and read template as point cloud\n",
-    "config = ScatteringConfig((80, 80), pixel_size, eps=1e-4)\n",
+    "config = ScatteringConfig((81, 81), pixel_size, eps=1e-4)\n",
     "cloud = load_grid_as_cloud(filename, config, threshold=1e-4)"
    ]
   },
@@ -106,7 +105,7 @@
    "outputs": [],
    "source": [
     "# Add gaussian noise\n",
-    "noise = WhiteNoise(alpha=1.0)\n",
+    "noise = WhiteNoise(sigma=1.0)\n",
     "noisy_image = optics_image + noise.sample(freqs, config)"
    ]
   },
@@ -117,7 +116,7 @@
    "outputs": [],
    "source": [
     "# Plot scattering\n",
-    "fig, axes = plt.subplots(ncols=3, figsize=(12, 6))\n",
+    "fig, axes = plt.subplots(ncols=3, figsize=(12, 7))\n",
     "ax1, ax2, ax3 = axes\n",
     "ax1.imshow(ifft(scattering_image), origin=\"lower\", cmap=\"gray\")\n",
     "ax2.imshow(ifft(optics_image), origin=\"lower\", cmap=\"gray\")\n",
@@ -141,10 +140,20 @@
     "# Initialize model, parameters, and compute image\n",
     "pose = EulerPose(-50.0, -50.0, np.pi / 8, np.pi / 10, np.pi / 4)\n",
     "optics = CTFOptics()\n",
-    "noise = WhiteNoise(alpha=1.0)\n",
-    "scattering_model = ScatteringImage(config=config, cloud=cloud, state=ParameterState(pose=pose))\n",
-    "optics_model = OpticsImage(config=config, cloud=cloud, state=ParameterState(pose=pose, optics=optics))\n",
-    "noisy_model = GaussianImage(config=config, cloud=cloud, state=ParameterState(pose=pose, optics=optics, noise=noise))\n"
+    "noise = WhiteNoise()\n",
+    "intensity = Intensity()\n",
+    "state = ParameterState(pose=pose, optics=optics, noise=noise, intensity=intensity)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scattering_model = ScatteringImage(config=config, cloud=cloud, state=state)\n",
+    "optics_model = OpticsImage(config=config, cloud=cloud, state=state)\n",
+    "noisy_model = GaussianImage(config=config, cloud=cloud, state=state)"
    ]
   },
   {
@@ -176,8 +185,8 @@
    "outputs": [],
    "source": [
     "# Define subset of parameters over which to evaluate model, and jitted model\n",
-    "params = dict(view_phi=np.pi, defocus_u=9000)\n",
-    "jitted_model = jax.jit(lambda params: optics_model(params))"
+    "params = dict(view_phi=np.pi, defocus_u=9000.0, sigma=1.0, N=1.0, mu=10.0)\n",
+    "jitted_noisy_model = jax.jit(lambda params: noisy_model(params))"
    ]
   },
   {
@@ -187,7 +196,7 @@
    "outputs": [],
    "source": [
     "# Benchmark jitted pipeline\n",
-    "%timeit optics_image = jitted_model(params)"
+    "jitted_noisy_image = jitted_noisy_model(params)"
    ]
   },
   {
@@ -197,7 +206,63 @@
    "outputs": [],
    "source": [
     "# Benchmark non-jitted pipeline\n",
-    "%timeit optics_image = optics_model(params)"
+    "noisy_image = noisy_model(params)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, we can also use the model to compute the likelihood. Let's evaulate the likelihood at the simulated data, and visualize the residuals."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize the model and plot residuals\n",
+    "fig, axes = plt.subplots(ncols=3, figsize=(12, 7))\n",
+    "ax1, ax2, ax3 = axes\n",
+    "model = GaussianImage(config=config, cloud=cloud, state=state, observed=ifft(noisy_model()))\n",
+    "simulated, observed, residuals = model.render(), model.observed, model.residuals()\n",
+    "ax1.imshow(ifft(simulated), origin=\"lower\", cmap=\"gray\")\n",
+    "ax2.imshow(ifft(observed), origin=\"lower\", cmap=\"gray\")\n",
+    "ax3.imshow(ifft(residuals), origin=\"lower\", cmap=\"gray\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Compute likelihood\n",
+    "loss = jax.jit(lambda params: model(params))\n",
+    "grad_loss = jax.jit(jax.grad(lambda params: model(params)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Benchmark jitted pipeline\n",
+    "likelihood = loss(params)\n",
+    "likelihood"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Benchmark gradient\n",
+    "grad = grad_loss(params)\n",
+    "grad"
    ]
   }
  ],
@@ -217,7 +282,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.11"
   },
   "vscode": {
    "interpreter": {
