--- a/notebooks/test-pipeline.ipynb
+++ b/notebooks/test-pipeline.ipynb
@@ -44,7 +44,8 @@
     "from jax_2dtm.simulator import compute_anti_aliasing_filter\n",
     "from jax_2dtm.simulator import Cloud, ScatteringConfig\n",
     "from jax_2dtm.simulator import ScatteringImage, OpticsImage, GaussianImage\n",
-    "from jax_2dtm.simulator import EulerPose, CTFOptics, Intensity, WhiteNoise, ParameterState\n",
+    "from jax_2dtm.simulator import AntiAliasingFilter, WhiteningFilter\n",
+    "from jax_2dtm.simulator import EulerPose, CTFOptics, Intensity, LorenzianNoise, WhiteNoise, ParameterState\n",
     "from jax_2dtm.utils import fft, ifft, fftfreqs"
    ]
   },
@@ -175,6 +176,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Now, let's test altering the image filters."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Instantiate image filters\n",
+    "micrograph = noisy_model()\n",
+    "filters = [AntiAliasingFilter(config, freqs), WhiteningFilter(config, freqs, micrograph)]\n",
+    "filtered_model = GaussianImage(config=config, cloud=cloud, state=state, filters=filters)\n",
+    "plt.imshow(ifft(filtered_model()), origin=\"lower\", cmap=\"gray\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "whitening = filters[1]\n",
+    "plt.imshow(np.log(whitening.filter), cmap=\"gray\")\n",
+    "plt.colorbar()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Computing an image is straight-forward, but really we want to define a function that can be arbitrarily transformed by JAX and evaulated at subsets of the parameters."
    ]
   },
@@ -210,6 +243,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
