Put filters and noise in pixel coordinates to simplify API. Optionally pass freqs in noise for compatibility across models but also sensible usage.

--- a/notebooks/test-pipeline.ipynb
+++ b/notebooks/test-pipeline.ipynb
@@ -42,10 +42,10 @@
    "source": [
     "# Image simulator\n",
     "from jax_2dtm.simulator import compute_anti_aliasing_filter\n",
-    "from jax_2dtm.simulator import Cloud, ScatteringConfig\n",
+    "from jax_2dtm.simulator import ScatteringConfig\n",
     "from jax_2dtm.simulator import ScatteringImage, OpticsImage, GaussianImage\n",
     "from jax_2dtm.simulator import AntiAliasingFilter, WhiteningFilter\n",
-    "from jax_2dtm.simulator import EulerPose, CTFOptics, Intensity, LorenzianNoise, WhiteNoise, ParameterState\n",
+    "from jax_2dtm.simulator import EulerPose, CTFOptics, Intensity, WhiteNoise, LorenzianNoise, ParameterState\n",
     "from jax_2dtm.utils import fft, ifft, fftfreqs"
    ]
   },
@@ -81,7 +81,7 @@
     "freqs = fftfreqs(config.shape, config.pixel_size)\n",
     "pose = EulerPose(-50.0, -50.0, np.pi / 8, np.pi / 10, np.pi / 4)\n",
     "transformed_cloud = cloud.view(pose)\n",
-    "scattering_image = transformed_cloud.project(config) * compute_anti_aliasing_filter(freqs, config.pixel_size, cutoff=1.0)"
+    "scattering_image = transformed_cloud.project(config) * compute_anti_aliasing_filter(freqs * config.pixel_size, cutoff=1.0)"
    ]
   },
   {
@@ -106,8 +106,9 @@
    "outputs": [],
    "source": [
     "# Add gaussian noise\n",
-    "noise = WhiteNoise(sigma=1.0)\n",
-    "noisy_image = optics_image + noise.sample(freqs, config)"
+    "key = jax.random.PRNGKey(seed=0)\n",
+    "noise = WhiteNoise(key=key, sigma=1.0)\n",
+    "noisy_image = optics_image + noise.sample(freqs * config.pixel_size)"
    ]
   },
   {
@@ -141,7 +142,7 @@
     "# Initialize model, parameters, and compute image\n",
     "pose = EulerPose(-50.0, -50.0, np.pi / 8, np.pi / 10, np.pi / 4)\n",
     "optics = CTFOptics()\n",
-    "noise = WhiteNoise()\n",
+    "noise = WhiteNoise(key=key)\n",
     "intensity = Intensity()\n",
     "state = ParameterState(pose=pose, optics=optics, noise=noise, intensity=intensity)\n"
    ]
@@ -186,10 +187,11 @@
    "outputs": [],
    "source": [
     "# Instantiate image filters\n",
+    "fig, ax = plt.subplots(figsize=(4, 4))\n",
     "micrograph = noisy_model()\n",
-    "filters = [AntiAliasingFilter(config, freqs), WhiteningFilter(config, freqs, micrograph)]\n",
+    "filters = [AntiAliasingFilter(config.pixel_size * freqs), WhiteningFilter(config.pixel_size * freqs, micrograph)]\n",
     "filtered_model = GaussianImage(config=config, cloud=cloud, state=state, filters=filters)\n",
-    "plt.imshow(ifft(filtered_model()), origin=\"lower\", cmap=\"gray\")"
+    "ax.imshow(ifft(filtered_model()), origin=\"lower\", cmap=\"gray\")"
    ]
   },
   {
@@ -198,9 +200,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "whitening = filters[1]\n",
-    "plt.imshow(np.log(whitening.filter), cmap=\"gray\")\n",
-    "plt.colorbar()"
+    "# Visualize filters\n",
+    "fig, axes = plt.subplots(ncols=2, figsize=(8, 6))\n",
+    "ax1, ax2 = axes\n",
+    "antialias, whiten = filters\n",
+    "im1 = ax1.imshow(np.log(whiten.filter), cmap=\"gray\")\n",
+    "im2 = ax2.imshow(antialias.filter, cmap=\"gray\")"
    ]
   },
   {
@@ -259,7 +264,7 @@
     "# Initialize the model and plot residuals\n",
     "fig, axes = plt.subplots(ncols=3, figsize=(12, 7))\n",
     "ax1, ax2, ax3 = axes\n",
-    "model = GaussianImage(config=config, cloud=cloud, state=state, observed=ifft(noisy_model()))\n",
+    "model = GaussianImage(config=config, cloud=cloud, state=state, observed=noisy_model())\n",
     "simulated, observed, residuals = model.render(), model.observed, model.residuals()\n",
     "ax1.imshow(ifft(simulated), origin=\"lower\", cmap=\"gray\")\n",
     "ax2.imshow(ifft(observed), origin=\"lower\", cmap=\"gray\")\n",
@@ -298,6 +303,13 @@
     "grad = grad_loss(params)\n",
     "grad"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -316,7 +328,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.12"
   },
   "vscode": {
    "interpreter": {
