Dataclasses now have an array encoder (non-hacky way to do it). ParameterState, Image, and Filter not yet serializable

--- a/notebooks/test-pipeline.ipynb
+++ b/notebooks/test-pipeline.ipynb
@@ -42,7 +42,7 @@
    "source": [
     "# Image simulator\n",
     "from jax_2dtm.simulator import compute_anti_aliasing_filter\n",
-    "from jax_2dtm.simulator import ScatteringConfig\n",
+    "from jax_2dtm.simulator import ScatteringConfig, Cloud\n",
     "from jax_2dtm.simulator import ScatteringImage, OpticsImage, GaussianImage\n",
     "from jax_2dtm.simulator import AntiAliasingFilter, WhiteningFilter\n",
     "from jax_2dtm.simulator import EulerPose, CTFOptics, Intensity, WhiteNoise, LorenzianNoise, ParameterState\n",
@@ -303,13 +303,6 @@
     "grad = grad_loss(params)\n",
     "grad"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
