Filters should not store arrays other than filter in its fields (use InitVar). ImageConfig should have the image coordinates.

--- a/notebooks/test-pipeline.ipynb
+++ b/notebooks/test-pipeline.ipynb
@@ -78,10 +78,9 @@
    "outputs": [],
    "source": [
     "# Compute scattering image\n",
-    "freqs = fftfreqs(config.shape, config.pixel_size)\n",
     "pose = EulerPose(-50.0, -50.0, np.pi / 8, np.pi / 10, np.pi / 4)\n",
     "transformed_cloud = cloud.view(pose)\n",
-    "scattering_image = transformed_cloud.project(config) * compute_anti_aliasing_filter(freqs * config.pixel_size, cutoff=1.0)"
+    "scattering_image = transformed_cloud.project(config) * compute_anti_aliasing_filter(config.freqs * config.pixel_size, cutoff=1.0)"
    ]
   },
   {
@@ -93,7 +92,7 @@
     "# Apply optics model and normalize\n",
     "N1, N2 = config.shape\n",
     "optics = CTFOptics()\n",
-    "ctf = optics(freqs)\n",
+    "ctf = optics(config.freqs)\n",
     "optics_image = scattering_image * ctf\n",
     "optics_image = optics_image.at[N1//2, N2//2].set(0.0)\n",
     "optics_image = optics_image / (jnp.sqrt(jnp.sum((optics_image * jnp.conjugate(optics_image)))) / (N1*N2))"
@@ -108,7 +107,7 @@
     "# Add gaussian noise\n",
     "key = jax.random.PRNGKey(seed=0)\n",
     "noise = WhiteNoise(key=key, sigma=1.0)\n",
-    "noisy_image = optics_image + noise.sample(freqs * config.pixel_size)"
+    "noisy_image = optics_image + noise.sample(config.freqs * config.pixel_size)"
    ]
   },
   {
@@ -189,7 +188,7 @@
     "# Instantiate image filters\n",
     "fig, ax = plt.subplots(figsize=(4, 4))\n",
     "micrograph = noisy_model()\n",
-    "filters = [AntiAliasingFilter(config.pixel_size * freqs), WhiteningFilter(config.pixel_size * freqs, micrograph)]\n",
+    "filters = [AntiAliasingFilter(config.pixel_size * config.freqs), WhiteningFilter(config.pixel_size * config.freqs, micrograph)]\n",
     "filtered_model = GaussianImage(config=config, cloud=cloud, state=state, filters=filters)\n",
     "ax.imshow(ifft(filtered_model()), origin=\"lower\", cmap=\"gray\")"
    ]
