speedup by using 2D nufft. correct option to remove zeros.

--- a/notebooks/test-pipeline.ipynb
+++ b/notebooks/test-pipeline.ipynb
@@ -67,8 +67,8 @@
    "outputs": [],
    "source": [
     "# Configure image data and read template as point cloud\n",
-    "config = ScatteringConfig((81, 81), pixel_size, eps=1e-4)\n",
-    "cloud = load_grid_as_cloud(filename, config, threshold=1e-4)"
+    "config = ScatteringConfig((81, 81), pixel_size, eps=1e-6)\n",
+    "cloud = load_grid_as_cloud(filename, config)"
    ]
   },
   {
