--- a/notebooks/test-pipeline.ipynb
+++ b/notebooks/test-pipeline.ipynb
@@ -42,7 +42,7 @@
    "source": [
     "# Image simulator\n",
     "from jax_2dtm.simulator import compute_anti_aliasing_filter\n",
-    "from jax_2dtm.simulator import ScatteringConfig, Cloud\n",
+    "from jax_2dtm.simulator import NufftScattering, GaussianScattering, Cloud\n",
     "from jax_2dtm.simulator import ScatteringImage, OpticsImage, GaussianImage\n",
     "from jax_2dtm.simulator import AntiAliasingFilter, WhiteningFilter\n",
     "from jax_2dtm.simulator import EulerPose, CTFOptics, Intensity, WhiteNoise, LorenzianNoise, ParameterState\n",
@@ -67,7 +67,8 @@
    "outputs": [],
    "source": [
     "# Configure image data and read template as point cloud\n",
-    "config = ScatteringConfig((81, 81), pixel_size, eps=1e-6)\n",
+    "config = NufftScattering((81, 81), pixel_size, eps=1e-6)\n",
+    "#config = GaussianScattering((81, 81), pixel_size, scale=pixel_size/3)\n",
     "cloud = load_grid_as_cloud(filename, config)"
    ]
   },
